...
    "createAccountMsg": "Create your account!",
    "fullname": "Full Name",
    "passwordCases": "Use 8+ chars, uppercase, lowercase, number & special character",
    "confirmPassword": "Confirm Password",
    "selectRole": "Who are you?",
    "teacher": "Teacher",
    "parent": "Parent",
    "register": "Register",
    "isMember": "Already a member?",
    "loringo": "Loringo",
    "emailPassReset1": "Email to reset password has been sent to",
    "emailPassReset2": "Revise your inbox and follow the instructions",
    "emailPassErr": "Error on sending to email",
...
    "biometricGeneric": "Biometrics",
    "accessCodeNotAvailable": "Access code not available",
    "shareCodeToChild": "Share this code with your child to log in:",
    "codeCopied": "Code copied",
    "copyCode": "Copy Code",
    "addChild": "Add Child",
    "joinGroup": "Join Group",
    "accessCode": "Access Code",
    "confirmIdentity": "Confirm it's you",
    "confirmIdentityBody": "For your child's security, confirm your identity before viewing the access code.",
    "invalidPassword": "Invalid password. Please try again.",
    "verify": "Verify",
    "reportsSubMsg": "Register a child first to see reports",
...
    "registerChildParent": "Register Your Child!",
    "registerChildSub": "To continue, we need your child's name",
    "childFullname": "Child's full name",
    "childAvatar": "Your child's avatar",
    "avatarSelected1": "Avatar selected",
    "avatarSelected2": "Tap to choose an avatar",
    "registerChildSimple": "Register Child",
    "childRegistered": "Child Registered!",
    "studentAccessCode": "Student Access Code",
    "important": "Important!",
    "importantMsgParent": "Save this code. Your child will need it to log in to the app for the first time.",
    "registerAnotherChild": "Register Another Child",
    "hello": "Hello",
...
    "keepLearningMsg": "You're doing great! Complete more activities to improve your skills.",
    "totalXp": "Total XP",
    "seasonXp": "Season XP",
    "xp": "XP",
    "maxLeague": "Max League",
    "nextLeague": "XP to next league",
    "activities": "Activities",
    "quizzes": "Quizzes",
    "total": "Total",
    "leagueTiers": "League Tiers",
    "you": "YOU",
    "starter": "Starter",
    "bronze": "Bronze",
...
      "weakPassword": "Password is too weak.",
      "invalidEmailFormat": "Invalid email format.",
      "registrationFailed": "Registration failed",
      "signUpSubtitle": "Sign up to Loringo",
      "registeringAsAdmin": "Registering as Administrator",
      "iAmA": "I am a…",
      "createAccountButton": "Create Account",
      "alreadyHaveAccount": "Already have an account? ",
      "consentLabel": "I have read and accept the privacy policy regarding my personal data.",
      "consentRequired": "You must accept the privacy policy to continue."
    },
    "reset_password_screen": {
      "waitBeforeCode": "Please wait {minutes} minutes before requesting a code",
...
